--- a/pages/volunteering.html
+++ b/pages/volunteering.html
@@ -53,8 +53,7 @@
 								<h1>Volunteering</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p>Forging a Path of Generosity Across Time, Illuminating Futures with Each Step</p>
 							</div>
 						</div>
 					</section>
@@ -66,9 +65,9 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Sed amet aliquam</h2>
+										<h2>Years of Giving, Countless Smiles</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+									<p>Navigating a path of generosity across the years, I've embarked on a unique journey of volunteering that resonates deeply with my core values. With every step I take in service, I find myself illuminating futures and creating ripples of positive change. This journey has become a testament to the enduring power of my selfless actions, as I tirelessly work to uplift communities, bridge gaps, and craft new opportunities.</p>
 								</div>
 							</section>
 
@@ -81,10 +80,14 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> monitoring </span>IEEE Young Professionals</h3>
-												<h4>Jun. 2022 - Sep. 2022</h4>
+												<h3><span class="material-symbols-outlined"> corporate_fare </span>IEEE Young Professionals</h3>
+												<h4>Mar. 2022 - Present</h4>
 											</header>
-											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project. This project is carried out as part of the Google Summer of Code program.</p>
+											<li><span style="font-weight:350"><b>Vice Chair - Products & Services</b> (Jan. 2023 - Present)</span><br></li>
+											<li><span style="font-weight:350"><b>TAB Representative (Region 7-10)</b> (Jan. 2023 - Present)</span><br></li>
+											<li><span style="font-weight:350"><b>Task Force Chair - Operations & IEEE Volunteering Platform</b> (Mar. 2022 - Present)</span><br></li>
+											<br>
+											<p>IEEE Young Professionals (YP) is a global community and program within the Institute of Electrical and Electronics Engineers (IEEE) that aims to engage and support early-career professionals in various technical and professional development activities.</p>
 											<ul class="actions">
 												<li><a href="https://yp.ieee.org/" target="_blank" class="button">IEEE YP</a></li>
 											</ul>
@@ -98,12 +101,16 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> monitoring </span>IEEE Students</h3>
-												<h4>Jun. 2022 - Sep. 2022</h4>
+												<h3><span class="material-symbols-outlined"> school </span>IEEE Students</h3>
+												<h4>Mar. 2021 - Present</h4>
 											</header>
-											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project. This project is carried out as part of the Google Summer of Code program.</p>
+											<li><span style="font-weight:350"><b>YP Representative</b> (Jan. 2023 - Present)</span><br></li>
+											<li><span style="font-weight:350"><b>Industry Representative</b> (Jan. 2023 - Present)</span><br></li>
+											<li><span style="font-weight:350"><b>Member, Membership Retention & Recovery</b> (Mar. 2021 - Feb. 2022)</span><br></li>
+											<br>
+											<p>IEEE Students is a subgroup within the IEEE (Institute of Electrical and Electronics Engineers) that focuses on supporting student activities and engagement across different geographic regions. Its aim is to enhance the educational and professional experiences of IEEE student members through various events, programs, and initiatives.</p>
 											<ul class="actions">
-												<li><a href="https://cross.ucsc.edu" target="_blank" class="button">IEEE Students</a></li>
+												<li><a href="https://students.ieee.org/" target="_blank" class="button">IEEE Students</a></li>
 											</ul>
 										</div>
 									</div>
@@ -115,12 +122,16 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> monitoring </span>IEEE Computer Society</h3>
-												<h4>Jun. 2022 - Sep. 2022</h4>
+												<h3><span class="material-symbols-outlined"> computer </span>IEEE Computer Society</h3>
+												<h4>Sep. 2021 - Present</h4>
 											</header>
-											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project. This project is carried out as part of the Google Summer of Code program.</p>
+											<li><span style="font-weight:350"><b>Lead - SYP Congress, IEEE CS SYP MGAB</b> (Jan. 2023 - Present)</span><br></li>
+											<li><span style="font-weight:350"><b>Student Activities Coordinator, IEEE CS Sri Lanka</b> (Sep. 2021 - Feb. 2023)</span><br></li>
+											<li><span style="font-weight:350"><b>Assistant Treasurer, IEEE CS Sri Lanka</b> (Sep. 2021 - Feb. 2023)</span><br></li>
+											<br>
+											<p>IEEE Computer Society is a professional organization and technical community within the Institute of Electrical and Electronics Engineers (IEEE) that focuses on advancing the theory, practice, and application of computer and information processing technologies.</p>
 											<ul class="actions">
-												<li><a href="https://cross.ucsc.edu" target="_blank" class="button">IEEE CS</a></li>
+												<li><a href="https://www.computer.org/" target="_blank" class="button">IEEE CS</a></li>
 											</ul>
 										</div>
 									</div>
@@ -132,12 +143,16 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> monitoring </span>IEEE Sri Lanka</h3>
-												<h4>Jun. 2022 - Sep. 2022</h4>
+												<h3><span class="material-symbols-outlined"> flag </span>IEEE Sri Lanka</h3>
+												<h4>Jan. 2019 - Present</h4>
 											</header>
-											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project. This project is carried out as part of the Google Summer of Code program.</p>
+											<li><span style="font-weight:350"><b>Secretary</b> (Feb. 2023 - Present)</span><br></li>
+											<li><span style="font-weight:350"><b>Student Activities Chair</b> (Feb. 2022 - Feb. 2023)</span><br></li>
+											<li><span style="font-weight:350"><b>Student Representative</b> (Jan. 2020 - Feb. 2021)</span><br></li>
+											<br>
+											<p>IEEE Sri Lanka Section is the local body of the Institute of Electrical and Electronics Engineers (IEEE) that facilitates networking, education, and collaboration among professionals and students in the field of electrical and electronics engineering within Sri Lanka.</p>
 											<ul class="actions">
-												<li><a href="https://cross.ucsc.edu" target="_blank" class="button">IEEE SL</a></li>
+												<li><a href="https://www.ieee.lk/" target="_blank" class="button">IEEE SL</a></li>
 											</ul>
 										</div>
 									</div>
@@ -150,11 +165,13 @@
 										<div class="inner">
 											<header class="major">
 												<h3><span class="material-symbols-outlined"> psychology </span>Institution of Engineers, Sri Lanka</h3>
-												<h4>Mar. 2020 - Present</h4>
+												<h4>Dec. 2018 - Dec. 2019</h4>
 											</header>
-											<p>State-of-the-art System-on-Chip (SoC) designs consist of many Intellectual Property (IP) cores that interact using a Network-on-Chip (NoC) architecture. As a result, NoC has become a critical component in state-of-the-art SoC designs [16, 17, 19]. </p>
+											<li><span style="font-weight:350"><b>Chief Organizer - IESL RoboGames</b> (Dec. 2018 - Dec. 2019)</span><br></li>
+											<br>
+											<p>The Institution of Engineers, Sri Lanka is the multidisciplinary professional engineering institution in Sri Lanka. It promotes and advances the field of engineering in Sri Lanka through education, collaboration, and knowledge-sharing among engineers.</p>
 											<ul class="actions">
-												<li><a href="https://www.cise.ufl.edu/research/cad/index.html" target="_blank" class="button">IESL</a></li>
+												<li><a href="https://www.iesl.lk/" target="_blank" class="button">IESL</a></li>
 											</ul>
 										</div>
 									</div>
@@ -166,12 +183,14 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> analytics </span>The Climate Reality Project</h3>
-												<h4>Oct. 2020 - Present</h4>
+												<h3><span class="material-symbols-outlined"> thermostat </span>The Climate Reality Project</h3>
+												<h4>Jul. 2020 - Sep. 2020</h4>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<li><span style="font-weight:350"><b>CLimate Reality Leader</b> (Jul. 2020 - Sep. 2020)</span><br></li>
+											<br>
+											<p>The Climate Reality Leadership Corps is a global network of activists committed to spreading awareness of the climate crisis and working for solutions to the greatest challenge of our time.</p>
 											<ul class="actions">
-												<li><a href="https://www.latrobe.edu.au/cdac" target="_blank" class="button">Climate Reality</a></li>
+												<li><a href="https://www.climaterealityproject.org/" target="_blank" class="button">Climate Reality</a></li>
 											</ul>
 										</div>
 									</div>
@@ -183,12 +202,14 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> analytics </span>The Road to Rights</h3>
-												<h4>Oct. 2020 - Present</h4>
+												<h3><span class="material-symbols-outlined"> communities </span>The Road to Rights</h3>
+												<h4>Oct. 2020 - Jan. 2022</h4>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<li><span style="font-weight:350"><b>Executive for Innovation and Strategy, G17</b> (Oct. 2020 - Jan. 2022)</span><br></li>
+											<br>
+											<p>The Road to Rights International is a registered youth-led, voluntary organization aimed at supporting and empowering young people on creating opportunities, skills development, creativity, and innovation by taking a Human rights-based approach towards Peace and Sustainable Development.</p>
 											<ul class="actions">
-												<li><a href="https://www.latrobe.edu.au/cdac" target="_blank" class="button">R2R</a></li>
+												<li><a href="https://www.roadtorights.org/" target="_blank" class="button">R2R</a></li>
 											</ul>
 										</div>
 									</div>
@@ -200,29 +221,37 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> analytics </span>AIESEC Colombo South</h3>
-												<h4>Oct. 2020 - Present</h4>
+												<h3><span class="material-symbols-outlined"> directions_walk </span>AIESEC Colombo South</h3>
+												<h4>Dec. 2017 - Mar. 2019</h4>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<li><span style="font-weight:350"><b>Member, Feel Lanka</b> (2018)</span><br></li>
+											<li><span style="font-weight:350"><b>Member, YEP 9.0</b> (2019)</span><br></li>
+											<li><span style="font-weight:350"><b>Member, Entrepreneur</b> (2019)</span><br></li>
+											<br>
+											<p>AIESEC is the world's largest youth-run organization. It is an international non-governmental that provides young people with leadership development, cross-cultural global internships, and volunteer exchange experiences across the globe.</p>
 											<ul class="actions">
-												<li><a href="https://www.latrobe.edu.au/cdac" target="_blank" class="button">AIESEC</a></li>
+												<li><a href="https://www.aiesec.lk/" target="_blank" class="button">AIESEC</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="../images/latrobe.png" alt="" data-position="25% 25%" />
+										<img src="../images/entrepreneur.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> analytics </span>Entrepreneurship Society, UOM</h3>
-												<h4>Oct. 2020 - Present</h4>
+												<h3><span class="material-symbols-outlined"> store </span>Entrepreneurship Society, UOM</h3>
+												<h4>Sep. 2017 - Jul. 2022</h4>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<li><span style="font-weight:350"><b>President</b> (Jan. 2022 - Jul. 2022)</span><br></li>
+											<li><span style="font-weight:350"><b>Vice President</b> (Jun. 2020 - Dec. 2021)</span><br></li>
+											<li><span style="font-weight:350"><b>Head of Operations</b> (Mar. 2019 - Jun. 2020)</span><br></li>
+											<br>
+											<p>An Entrepreneurial Accelerator of University of Moratuwa which aims to build a secure future for young entrepreneurs.</p>
 											<ul class="actions">
-												<li><a href="https://www.latrobe.edu.au/cdac" target="_blank" class="button">ES UOM</a></li>
+												<li><a href="https://www.facebook.com/entrepreneur.uom" target="_blank" class="button">ES UOM</a></li>
 											</ul>
 										</div>
 									</div>
@@ -234,12 +263,14 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> monitoring </span>IEEE Student Branch, UOM</h3>
-												<h4>Jun. 2022 - Sep. 2022</h4>
+												<h3><span class="material-symbols-outlined"> groups </span>IEEE Student Branch, UOM</h3>
+												<h4>Sep. 2017 - Jul. 2022</h4>
 											</header>
-											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project. This project is carried out as part of the Google Summer of Code program.</p>
+											<li><span style="font-weight:350"><b>Webmaster</b> (Jun. 2019 - Jul. 2020)</span><br></li>
+											<br>
+											<p>IEEE Student Branch University of Moratuwa is one of the outstanding student branches in Sri Lanka enforced with a wide range of active members, young, dedicated volunteers and supportive academic staff members all working together towards serving the community.</p>
 											<ul class="actions">
-												<li><a href="https://cross.ucsc.edu" target="_blank" class="button">IEEE SB UOM</a></li>
+												<li><a href="https://site.ieee.org/sb-moratuwa/" target="_blank" class="button">IEEE SB UOM</a></li>
 											</ul>
 										</div>
 									</div>
@@ -251,12 +282,14 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3><span class="material-symbols-outlined"> monitoring </span>SEDS Mora</h3>
-												<h4>Jun. 2022 - Sep. 2022</h4>
+												<h3><span class="material-symbols-outlined"> rocket_launch </span>SEDS Mora</h3>
+												<h4>Jan. 2019 - Jun. 2020</h4>
 											</header>
-											<p>OpenROAD is a front-runner in open-source semiconductor design automation tools. In this work, the main objective is to implement design modifications for the power planning module of the OpenROAD Project. This project is carried out as part of the Google Summer of Code program.</p>
+											<li><span style="font-weight:350"><b>IT Pillar Head</b> (Jan. 2019 - Jun. 2020)</span><br></li>
+											<br>
+											<p>Students for the Exploration and Development of Space is an international student organization whose purpose is to promote space exploration and development through educational and engineering projects.</p>
 											<ul class="actions">
-												<li><a href="https://cross.ucsc.edu" target="_blank" class="button">SEDS MORA</a></li>
+												<li><a href="https://sedsmora.org/" target="_blank" class="button">SEDS MORA</a></li>
 											</ul>
 										</div>
 									</div>
